Use process isolation for Conjure runner